deployments/argo-cd/resources/argocd-grpc-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-grpc
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
    certmanager.k8s.io/issuer: "argocd-grpc-letsencrypt"
spec:
  tls:
    - hosts:
      - grpc.cd.roundtable.lsst.codes
      secretName: argocd-grpc-ingress-tls
  rules:
    - host: grpc.cd.roundtable.lsst.codes
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: https
