deployments/argo-cd/resources/argocd-ui-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: argocd-ui
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/proxy-body-size: 100M
    ingress.kubernetes.io/app-root: "/"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/issuer: "argocd-ui-letsencrypt"
spec:
  tls:
    - hosts:
      - cd.roundtable.lsst.codes
      secretName: argocd-ui-ingress-tls
  rules:
    - host: cd.roundtable.lsst.codes
      http:
        paths:
          - path: /
            backend:
              serviceName: argocd-server
              servicePort: http
